@@ -1,6 +1,7 @@
 2014-XX-YY Release 0.1.9
 	- new filter: -fcontains
-	- DB version 10: storing makedepends
+	- DB version 10: storing makedepends, new dependency list format: a tuple
+	  of string and version instead of just one string
 
 2014-07-12 Release 0.1.8
 	- integrity checks now honor replacement packages
